# Predict_Power_Output

./: .gitattributes  .gitignore  Journal.md  README.md  main.py  pyproject.toml
app/: app.py  tab_model_evaluation.py  tab_model_retraining.py  tab_predict_power_output.py
data/: data_dictionary.ipynb
data/orig/: solstice,equinox.csv  solstice_equinox_berlin.csv  wc_4677_codes_simplified.csv
data/scripts/: add_dwd_weather_data_to_power_data.py  add_openmeteo_weather_data_to_power_data.py  fetch_dwd_data.ipynb  fetch_dwd_data.py  fetch_past_openmeteo_weather_data.py  find_nearest_dwd_station.ipynb  transform_data.py  transform_sun_data.py
eda/: eda.ipynb  eda_openmeteodata_power.ipynb  eda_sunrad_power.ipynb
model_training/: solar_production_baseline.ipynb  solar_production_daily_baseline.ipynb  solar_production_daily_from_dwd_sunshine_duration.ipynb  solar_production_daily_from_openmeteo_weather.ipynb  solar_production_daily_trig.ipynb  solar_production_from_openmeteo_weather.ipynb  solar_production_from_sunshine_duration.ipynb  solar_production_hourly_baseline.ipynb  solar_production_hourly_from_openmeteo_weather.ipynb  solar_production_trig.ipynb  weather_forecast_daily_from_openmeteo_weather.ipynb  weather_forecast_from_openmeteo_weather.ipynb
models/: compare_models.ipynb
models_solar_daily/: compare_models.ipynb
models_solar_hourly/: compare_models.ipynb
src/: config.py  data.py  eda.py  model_evaluation.py  transformation.py  transformers.py
src/model_evaluation/: regressor_evaluation.py
(+21 files in other folders)
