[project]
name = "predict-power-output"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dateparser>=1.2.2",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "numpy>=1.26.4",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "ruff>=0.12.0",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "wetterdienst>=0.111.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
